--- a/Competitive Programming/.vscode/settings.json
+++ b/Competitive Programming/.vscode/settings.json
@@ -55,10 +55,5 @@
   "C_Cpp_Runner.useLeakSanitizer": false,
   "C_Cpp_Runner.showCompilationTime": false,
   "C_Cpp_Runner.useLinkTimeOptimization": false,
-  "C_Cpp_Runner.msvcSecureNoWarnings": false,
-  "files.associations": {
-    "iostream": "cpp",
-    "ostream": "cpp"
-  },
-  "C_Cpp.errorSquiggles": "enabled"
+  "C_Cpp_Runner.msvcSecureNoWarnings": false
 }
